*** empty log message ***

--- a/download.htm
+++ b/download.htm
@@ -40,14 +40,14 @@
         plain-text editor. </font></p>
       <table width="100%" border="0" cellspacing="2" cellpadding="2">
         <tr valign="top" bgcolor="#CCCCCC">
-          <td><p><font size="-1"><a href="/data/cPRF_niceformat.txt"><strong>cPRF_niceformat.txt</strong></a></font></p></td>
+          <td><p><font size="-1"><a href="data/cPRF_niceformat.txt"><strong>cPRF_niceformat.txt</strong></a></font></p></td>
           <td><p><font size="-1">This is probably the document that most people will want. It's
               formatted linearly, so that each record has it's own section. This
             document can be open in Word without too much trouble.(1.2 MB)</font></p>
             <p>&nbsp;</p></td>
         </tr>
         <tr valign="top" bgcolor="#CCCCCC">
-          <td><p><font size="-1"><a href="/data/cPRF_cols.txt"><strong>cPRF_cols.txt</strong></a></font></p>
+          <td><p><font size="-1"><a href="data/cPRF_cols.txt"><strong>cPRF_cols.txt</strong></a></font></p>
           <p>&nbsp;</p></td>
           <td><p><font size="-1">Column formatted document. Becuase the sequence and basepaired
               columns are so wide, this document is really not intended for use
