--- a/credits.htm
+++ b/credits.htm
@@ -28,14 +28,30 @@
       <p align="center">&nbsp;</p>
       <hr>
     </td>
-    <td valign="top"> <!-- #BeginEditable "body" -->       <table width="100%" border="2" cellspacing="0" cellpadding="0" bgcolor="#000000" bordercolor="#000000">        <tr>           <td> <font color="#FFCC00"><b><a href="index.htm">HOME</a> &#149; Credits...</b></font></td>        </tr>      </table>      <p>Site Content: Jonathan Dinman, Jonathan Jacobs, Trey Belew.</p>      <p>Site Design &amp; Maintenence          and all that jazz: Jonathan Jacobs and Trey Belew.</p>      <p>Originally created by Jonathan Jacobs (2000).</p>      <p align="center"><b> <a href="http://www.macromedia.com" target="_blank">         </a> </b><b><img src="images/madeonamac20050720.gif" width="98" height="36" align="absmiddle"> </b></p>      <p align="center"><b><img src="images/osxserver20050720.gif" width="155" height="47" align="absmiddle"></b></p>      <p align="center"><b><a href="http://www.mysql.com" target="_blank"><img src="images/mysql-13.gif" width="154" height="37" border="0" align="absmiddle" alt="MySQL"></a></b><b> </b></p>      <p align="center"><b><a href="http://www.perl.com" target="_blank"><img src="images/sourceforperl_85.gif" width="85" height="85" border="0" align="absmiddle" alt="PERL"></a>         </b></p>      <p align="center"><b><a href="http://perl.apache.org/" target="_blank"><img src="images/mod_perl.gif" width="90" height="30" align="absmiddle" border="0" alt="Mod_Perl for Apache"></a>         </b></p>      <p align="center"><b><a href="http://www.apache.org" target="_blank"><img src="images/apache_pb.gif" width="220" height="28" align="absmiddle" border="0" alt="Apache"></a></b></p>      <p>&nbsp;</p>       <!-- #EndEditable --> </td>
+    <td valign="top"> <!-- #BeginEditable "body" --> 
+      <table width="100%" border="2" cellspacing="0" cellpadding="0" bgcolor="#000000" bordercolor="#000000">
+        <tr> 
+          <td> <font color="#FFCC00"><b><a href="index.htm">HOME</a> &#149; Credits...</b></font></td>
+        </tr>
+      </table>
+      <p>Site Content:  Jonathan Jacobs, Trey Belew, Jonathan Dinman.</p>
+      <p>Site Design &amp; Maintenence
+          and all that jazz: Jonathan Jacobs and Trey Belew.</p>
+      <p>Original design and foundation content created by Jonathan Jacobs (2000).</p>
+      <p>&nbsp;</p>
+    <!-- #EndEditable --> </td>
   </tr>
   <tr>
     <td width="125">&nbsp;</td>
     <td>&nbsp;</td>
   </tr>
   <tr>
-    <td width="125"> <!-- #BeginEditable "rightFooter" -->       <p> Last page edit: <br>        <!-- #BeginDate format:Am1 -->November 8, 2005<!-- #EndDate -->        <br>        by <!-- #BeginLibraryItem "/Library/jjacobs_email.lbi" --><a href="mailto:jacobsjo@wam.umd.edu">Jonathan Jacobs</a><!-- #EndLibraryItem --></p>      <!-- #EndEditable --> </td>
+    <td width="125"> <!-- #BeginEditable "rightFooter" --> 
+      <p> Last page edit: <br>
+        <!-- #BeginDate format:Am1 -->March 1, 2006<!-- #EndDate -->
+        <br>
+        by <!-- #BeginLibraryItem "/Library/jjacobs_email.lbi" --><a href="mailto:jacobsjo@wam.umd.edu">Jonathan Jacobs</a><!-- #EndLibraryItem --></p>
+      <!-- #EndEditable --> </td>
     <td>
       <p align="center"><b><font size="-2"><a href="credits.htm">Credits.</a><br>
         </font></b><font size="-2"></font></p>
