--- a/html/header.html
+++ b/html/header.html
@@ -1,9 +1,34 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-    <html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-    <title>Explore</title>
-<!---    <link type="text/css" rel="stylesheet" href="http://micb-74.umd.edu/~trey/style.css"> --->
-    </head>
-    <body>
+<html>
+<head>
+<base href="[% base %]">
+<title>Programmed Ribosomal Frameshifting Database</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<link rel="stylesheet" href="styles/default.css" type="text/css">
+</head>
+<body bgcolor="#FFFFFF" text="#000000" link="#009933" vlink="#009900">
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
+  <tr>
+    <td><a href="[% base %]" target="_top"><img src="[% basedir %]/html/PRFdb_logo2.gif" width="255" height="85" vspace="2" border="0"></a><a href="[% base %]" target="_top"><img src="[% basedir %]/html/PRFdb_top_banner.jpg" width="328" height="80" vspace="2" border="0"></a></td>
+    <td valign="top">
+      <div align="right">
+        <script language="JavaScript" type="text/javascript"> <!-- document.write ('<b><font size="-2">' + Hours2 + ':' + Minutes + ' ' + ampm + '<br>' + Month + '-' + Day + '-' + Year+'<br></font></b>'); //--> </script>
+      </div>
+    </td>
+  </tr>
+</table>
+<hr>
+<table width="100%" border="0" cellspacing="0" cellpadding="3">
+  <tr>
+    <td width="125" align="center" valign="top">
+      <p><b><a href="[% base %]">Home</a></b></p>
+      <p><b><a href="[% importform %]">Import</a></b></p>
+      <p><b><a href="[% filterform %]">Filter Prfdb</a></b></p>      
+      <p><b><a href="download.htm">Download</a></b></p>
+      <hr>
+      <p align="center"><a href="http://www.umd.edu" target="_blank">The University
+          of Maryland</a></p>
+      <p align="center">&nbsp;</p>
+      <hr>
+    </td>
 
+    <td valign="top"> <!-- #BeginEditable "body" --> 
