--- a/html/header.html
+++ b/html/header.html
@@ -23,7 +23,7 @@
       <p><b><a href="[% base %]">Home</a></b></p>
       <p><b><a href="[% importform %]">Import</a></b></p>
       <p><b><a href="[% filterform %]">Filter Prfdb</a></b></p>      
-      <p><b><a href="download.htm">Download</a></b></p>
+      <p><b><a href="[% downloadform %]">Download</a></b></p>
       <hr>
       <p align="center"><a href="http://www.umd.edu" target="_blank">The University
           of Maryland</a></p>
