holy ass crackers

--- a/html/header.html
+++ b/html/header.html
@@ -3,32 +3,31 @@
 <base href="[% base %]">
 <title>Programmed Ribosomal Frameshifting Database</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link rel="stylesheet" href="styles/default.css" type="text/css">
+<link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body bgcolor="#FFFFFF" text="#000000" link="#009933" vlink="#009900">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td><a href="[% base %]" target="_top"><img src="[% basedir %]/html/PRFdb_logo2.gif" width="255" height="85" vspace="2" border="0"></a><a href="[% base %]" target="_top"><img src="[% basedir %]/html/PRFdb_top_banner.jpg" width="328" height="80" vspace="2" border="0"></a></td>
-    <td valign="top">
-      <div align="right">
-        <script language="JavaScript" type="text/javascript"> <!-- document.write ('<b><font size="-2">' + Hours2 + ':' + Minutes + ' ' + ampm + '<br>' + Month + '-' + Day + '-' + Year+'<br></font></b>'); //--> </script>
-      </div>
+    <td align = "center"><a href="[% base %]" target="_top">
+      <img src="[% basedir %]/html/PRFdb_logo2.gif" width="255" height="85" vspace="2" border="0"></a>
+      <a href="[% base %]" target="_top"><img src="[% basedir %]/html/PRFdb_top_banner.jpg" width="328" height="80" vspace="2" border="0"></a>
+    </td>
+  </tr>
+</table>
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
+  <tr>
+    <td width="125" align="center" valign="top">
+      <b><a href="[% base %]">Home</a></b>
+    </td>
+    <td width="125" align="center" valign="top">
+      <b><a href="[% importform %]">Import</a></b>
+    </td>
+    <td width="125" align="center" valign="top">
+      <b><a href="[% filterform %]">Filter Prfdb</a></b>
+    </td>
+    <td width="125" align="center" valign="top">
+      <b><a href="[% downloadform %]">Download</a></b>
     </td>
   </tr>
 </table>
 <hr>
-<table width="100%" border="0" cellspacing="0" cellpadding="3">
-  <tr>
-    <td width="125" align="center" valign="top">
-      <p><b><a href="[% base %]">Home</a></b></p>
-      <p><b><a href="[% importform %]">Import</a></b></p>
-      <p><b><a href="[% filterform %]">Filter Prfdb</a></b></p>      
-      <p><b><a href="[% downloadform %]">Download</a></b></p>
-      <hr>
-      <p align="center"><a href="http://www.umd.edu" target="_blank">The University
-          of Maryland</a></p>
-      <p align="center">&nbsp;</p>
-      <hr>
-    </td>
-
-    <td valign="top"> <!-- #BeginEditable "body" --> 
