--- a/html/detail_body.html
+++ b/html/detail_body.html
@@ -19,7 +19,7 @@
 	<td>
 	  [% species %]
 	</td>
-	<td width="40%" rowspan="11" valign="top">
+	<td width="40%" rowspan="12" valign="top">
 	  <div align="left"><img src="[% chartURL %]" border="2"></div>
 	</td>
       </tr>
@@ -66,6 +66,15 @@
 	</td>
 	<td>
 	  [% seqlength %]
+	</td>
+      </tr>
+
+      <tr valign="top" bgcolor="#E9EBF7">
+	<td width="20%">
+	  <div align="right"><strong>Slippery Site: </strong></div>
+	</td>
+	<td>
+	  [% slipsite %]
 	</td>
       </tr>
 
