--- a/html/header.html
+++ b/html/header.html
@@ -35,6 +35,6 @@
     To begin browsing the PRFdb, please enter your search terms below.<br>
     [% startsearchform %]
     [% searchquery %]
-    [% searchsubmit %]
+    [% submit %]
 </center>
 <br>
