--- a/html/header.html
+++ b/html/header.html
@@ -31,3 +31,10 @@
   </tr>
 </table>
 <hr>
+<center>
+    To begin browsing the PRFdb, please enter your search terms below.<br>
+    [% startsearchform %]
+    [% searchquery %]
+    [% searchsubmit %]
+</center>
+<br>
