--- a/html/filterform.html
+++ b/html/filterform.html
@@ -2,6 +2,8 @@
 
 Filter on species:
 [% species %]
+And algorithm:
+[% algorithm %]
 
 
 
@@ -10,5 +12,5 @@ Some other filters:
 <br>
 [% filters %]
 <br>
-[% submit %]
+[% filter_submit %]
     
