--- a/html/searchform.html
+++ b/html/searchform.html
@@ -2,3 +2,10 @@
 A majority of the Accessions in the PRFdb come from the Mammalian Genome Collection.
 It is available here: <a href="http://mgc.nci.nih.gov">http://mgc.nci.nih.gov</a>.
 <hr>
+
+Search the PRFdb for an arbitrary sequence using BLAST.<br>
+
+[% blast_startform %]
+[% blastsearch %]
+<br>
+[% blast_submit %]
