--- a/html/landscape.html
+++ b/html/landscape.html
@@ -1,5 +1,6 @@
 Landscape for [% accession %]<br>
 <a href="[% base %]/browse?accession=[% accession %]">Go back</a><br>
 The blue line plots nupack, the red line plots pknots.
+The start site is [% start %] and stop is [% stop %]
 <br><br>
 <img src=[% picture %]>
