awesome counters fun

--- a/html/detail_body.html
+++ b/html/detail_body.html
@@ -132,6 +132,11 @@
     <table align="center" width="95%" border="0" cellpadding="2" cellspacing="0" bgcolor="#E9EBF7">
       <tr>
 	<td>
+	  <font face="Courier New, Courier, mono" size="-1">[% numbers %]</font>
+        </td>
+      </tr>
+      <tr>
+	<td>
 	  <font face="Courier New, Courier, mono" size="-1">[% pk_input %]</font>
         </td>
       </tr>
@@ -145,8 +150,12 @@
     	  <font face="Courier New, Courier, mono" size="-1">[% parsed %]</font>
 	</td>
       </tr>
+      <tr>
+        <td>
+          <img src="[% feynman_url %]" border = "0">
+        </td>
+      </tr>
+
     </table>
 <p/>
-<img src="[% feynman_url %]" border="2">
-<p/
 <hr>
