changes to index

--- a/html/index.html
+++ b/html/index.html
@@ -1,16 +1,11 @@
-      <table width="100%" border="2" cellspacing="0" cellpadding="0" bgcolor="#000000" bordercolor="#000000">
-        <tr> 
-          <td> <b><font color="#FFCC00" size="-1">HOME</font></b></td>
-        </tr>
-      </table>
+      <center>
       <b>Welcome!</b> 
-      <p><font size="-1">This   online database is focused on cataloging programmed
-        ribosomal frameshift signals (PRF) in eukaryotic genomes. Please select
-          one of the links at left to get you started.</font></p>
-
-
-
-      <p>&nbsp; </p>
-      <!-- #EndEditable --> </td>
+      <p>
+      This online database is focused on cataloging programmed
+      ribosomal frameshift signals (PRF) in eukaryotic genomes.<br>
+      Please select one of the links above to get started.
+      </p>
+      </center>
+      </td>
   </tr>
 
