--- a/html/multimatch_body.html
+++ b/html/multimatch_body.html
@@ -1,10 +1,21 @@
 
 
   <tr>
-    <td valign="top"><div align="right"><font size="-2">[% counter %]</font></div></td>
-    <td valign="top" nowrap><div align="left"><font size="-2">[% genename %]</font></div></td>
-    <td valign="top" nowrap><div align="left"><a href="[% base %]/browse?accession=[% accession %]"><strong><font size="-2">[% accession %]</font></strong></a></div></td>
-    <td valign="top"><div align="left"><font size="-2">[% species %]</font></div></td>
-    <td valign="top"><div align="center"><strong><font size="-2">[% slipsite_count %]</font></strong></div></td>
-    <td valign="top"><div align="left"><font size="-2">[% comments %]</font></div></td>
+    <td valign="top" width=35%">
+      <div align="left"><font size="-1">[% genename %]</font></div>
+    </td>
+    <td valign="top" width="10%">
+      <div align="left">
+        <a href="[% base %]/browse?accession=[% accession %]"><strong><font size="-1">[% accession %]</font></strong></a>
+      </div>
+    </td>
+    <td valign="top" width="10%">
+      <div align="left"><font size="-1"><i>[% species %]</i></font></div>
+    </td>
+    <td valign="top" width="10%">
+      <div align="center"><strong><font size="-1">[% slipsite_count %]</font></strong></div>
+    </td>
+    <td valign="top" width="35%">
+      <div align="left"><font size="-1">[% comments %]</font></div>
+    </td>
   </tr>
