--- a/html/multimatch_header.html
+++ b/html/multimatch_header.html
@@ -1,9 +1,18 @@
 <table width="100%" border="0" cellspacing="0" cellpadding="2">
   <tr bgcolor="#000000">
-    <td>&nbsp;</td>
-    <td nowrap><div align="left"><strong><font color="#FFFFFF" size="-2">Gene Name</font></strong></div></td>
-    <td nowrap><div align="left"><strong><font color="#FFFFFF" size="-2">Accession</font></strong></div></td>
-    <td nowrap><div align="left"><strong><font color="#FFFFFF" size="-2">Species</font></strong></div></td>
-    <td nowrap><div align="center"><strong><font color="#FFFFFF" size="-2">#Slips</font></strong></div></td>
-    <td nowrap><div align="left"><strong><font color="#FFFFFF" size="-2">Comments</font></strong></div></td>
+    <td width="35%" nowrap>
+      <div align="left"><strong><font color="#FFFFFF" size="-1">Gene Name</font></strong></div>
+    </td>
+    <td nowrap width="10%">
+      <div align="left"><strong><font color="#FFFFFF" size="-1">Accession</font></strong></div>
+      </td>
+    <td nowrap width="10%">
+      <div align="left"><strong><font color="#FFFFFF" size="-1">Species</font></strong></div>
+    </td>
+    <td nowrap width="10%">
+      <div align="center"><strong><font color="#FFFFFF" size="-1">#Slips</font></strong></div>
+    </td>
+    <td nowrap width="35%">
+      <div align="left"><strong><font color="#FFFFFF" size="-1">Comments</font></strong></div>
+    </td>
   </tr>
