--- a/html/import.html
+++ b/html/import.html
@@ -1,4 +1,5 @@
-  Type the exact accession of the sequence you wish to import.  This must be in NCBI NR database.
+Type the exact accession of the sequence you wish to import.<br>
+This must be in the NCBI NR database.<br>
 [% startform %]
 [% import %]
 [% submit %]
