--- a/html/detail_body.html
+++ b/html/detail_body.html
@@ -105,7 +105,8 @@
 	  <div align="right"><strong>Z Score: </strong></div>
 	</td>
 	<td>
-	  [% zscore %]
+	  [% zscore %] 
+	  [% IF boot_db %] and [% boot_db %] from the db. [% END %]
 	</td>
       </tr>
 
