--- a/html/header.html
+++ b/html/header.html
@@ -31,11 +31,9 @@
     <td width="100" align="center" valign="top">
       <b><a href="[% downloadform %]">Download</a></b>
     </td>
-<!---
     <td width="100" align="center" valign="top">
       <b><a href="[% cloudform %]">Cloud</a></b>
     </td>
---->
   </tr>
 </table>
 <hr>
@@ -44,4 +42,5 @@
     [% startsearchform %]
     [% searchquery %]
     [% submit %]
+    [% endsearchform %]
 </center>
