--- a/html/detail_body.html
+++ b/html/detail_body.html
@@ -31,7 +31,7 @@
 	  <div align="right"><strong>Accession: </strong></div>
 	</td>
 	<td>
-	  [% accession %]
+	  <a href="[% base %]/browse?accession=[% accession %]">[% accession %]</a>
 	</td>
       </tr>
 
