small fix to cloud

--- a/html/mfe_z_body.html
+++ b/html/mfe_z_body.html
@@ -6,7 +6,7 @@
     </td>
     <td valign="top" width="10%">
       <div align="left">
-        <a href="[% base %]/detail?id=[% id %]&accession=[% accession %]&slipstart=[% start %]"><strong>[% accession %]</strong></a>
+        <a href="[% base %]/detail?accession=[% accession %]&slipstart=[% start %]"><strong>[% accession %]</strong></a>
       </div>
     </td>
     <td valign="top" width="10%">
