--- a/html/mfe_z_body.html
+++ b/html/mfe_z_body.html
@@ -10,7 +10,7 @@
       </div>
     </td>
     <td valign="top" width="10%">
-      <div align="left">[% start %]</div>
+      <div align="center">[% start %]</div>
     </td>
     <td valign="top" width="40%">
       <div align="left">[% comments %]</div>
