--- a/html/detail_body.html
+++ b/html/detail_body.html
@@ -139,21 +139,33 @@
       <tr>
 	<td>
 	  <font face="Courier New, Courier, mono" size="-1">[% pk_input %]</font>
+	  <font face="Courier New, Courier, mono" size="-3">
+	    <a href="[% base %]/download_subseq?mfeid=[% mfe_id %]">Download subsequence</a>
+	  </font>
         </td>
       </tr>
       <tr>
 	<td>
 	  <font face="Courier New, Courier, mono" size="-1">[% brackets %]</font>
+	  <font face="Courier New, Courier, mono" size="-3">
+	    <a href="[% base %]/download_parens?mfeid=[% mfe_id %]">Download brackets</a>
+	  </font>
 	</td>
       </tr>
       <tr>
         <td>
     	  <font face="Courier New, Courier, mono" size="-1">[% parsed %]</font>
+	  <font face="Courier New, Courier, mono" size="-3">
+	    <a href="[% base %]/download_parsed?mfeid=[% mfe_id %]">Download parsed</a>
+	  </font>
 	</td>
       </tr>
       <tr>
         <td>
           <img src="[% feynman_url %]" border = "0">
+	  <font face="Courier New, Courier, mono" size="-3">
+	    <a href="[% base %]/download_bpseq?mfeid=[% mfe_id %]">Download bpseq</a>
+	  </font>
         </td>
       </tr>
 
