--- a/html/index.html
+++ b/html/index.html
@@ -1,11 +1,25 @@
-      <center>
-      <b>Welcome!</b> 
-      <p>
-      This online database is focused on cataloging programmed
-      ribosomal frameshift signals (PRF) in eukaryotic genomes.<br>
-      Please select one of the links above to get started.
-      </p>
-      </center>
-      </td>
-  </tr>
-
+<center>
+  <b>Welcome!</b>
+</center>
+<p>
+  This online database is focused on cataloging programmed
+  ribosomal frameshift signals (PRF) in eukaryotic genomes.<br>
+  Please search for a gene of interest or select one of the
+  links above to get started.<br>
+  Most of the sequence information from this database came
+  from either the <a href="http://yeastgenome.org">Yeast Genome Project</a>
+  or the <a href="http://mgc.nci.nih.gov">Mammalian Gene Collection</a>.
+</p>
+<p>
+  Currently, there are [% cerevisiae_count %] entries from
+  <i>Saccharomyces cerevisiae</i>, [% sapiens_count %] entries from
+  <i>Homo sapiens</i>, and [% musculus_count %] entries from
+  <i>Mus musculus</i>.  The last update to the database was a <i>[% last_species %]</i>
+  at [% lastupdate %].
+</p>
+<p>
+  It is possible to search for any word(s) from the NCBI or SGD gene
+  description as well as the canonical gene name.  Thus searching for
+  'RPL' or 'ribosome' are likely candidates for looking at ribosomal
+  genes.
+</p>
