--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
   <i>Saccharomyces cerevisiae</i>, [% sapiens_count %] entries from
   <i>Homo sapiens</i>, and [% musculus_count %] entries from
   <i>Mus musculus</i>.  The last update to the database was a <i>[% last_species %]</i>
-  at [% lastupdate %].
+   sequence at [% lastupdate %].
 </p>
 <p>
   It is possible to search for any word(s) from the NCBI or SGD gene
