--- a/html/mfe_z_header.html
+++ b/html/mfe_z_header.html
@@ -1,5 +1,5 @@
-Checking the database for Entries with an MFE [% mfe %] <= x <= [% mfe_plus %]<br>
-and a Zscore [% z %] <= y <= [% z_plus %] of species [% species %]<br>
+Checking the database for Entries with an MFE [% mfe_minus %] <= x <= [% mfe_plus %]<br>
+and a Zscore [% z_minus %] <= y <= [% z_plus %] of species [% species %]<br>
 <table width="100%" border="0" cellspacing="0" cellpadding="2">
   <tr bgcolor="#000000">
     <td width="35%" nowrap>
