--- a/html/multimatch_body.html
+++ b/html/multimatch_body.html
@@ -2,24 +2,24 @@
 
   <tr>
     <td valign="top" width=35%">
-      <div align="left"><font size="-1">[% genename %]</font>
+      <div align="left">[% genename %]
   [% IF short_accession %]
   <a href="http://db.yeastgenome.org/cgi-bin/locus.pl?locus=[% short_accession %]">SGD Link</a>
   [% END %]
-</div>
+  </div>
     </td>
     <td valign="top" width="10%">
       <div align="left">
-        <a href="[% base %]/browse?accession=[% accession %]"><strong><font size="-1">[% accession %]</font></strong></a>
+        <a href="[% base %]/browse?accession=[% accession %]"><strong>[% accession %]</strong></a>
       </div>
     </td>
     <td valign="top" width="10%">
-      <div align="left"><font size="-1"><i>[% species %]</i></font></div>
+      <div align="left"><i>[% species %]</i></div>
     </td>
     <td valign="top" width="10%">
-      <div align="center"><strong><font size="-1">[% slipsite_count %]</font></strong></div>
+      <div align="center"><strong>[% slipsite_count %]</strong></div>
     </td>
     <td valign="top" width="35%">
-      <div align="left"><font size="-1">[% comments %]</font></div>
+      <div align="left">[% comments %]</div>
     </td>
   </tr>
