small feynman fixes

--- a/html/detail_body.html
+++ b/html/detail_body.html
@@ -162,7 +162,7 @@
       </tr>
       <tr>
         <td>
-          <img src="[% feynman_url %]" border = "0">
+          <embed src="[% feynman_url %]"  width = [% feynman_width %] height = [% feynman_height %] border = "0">
 	  <font face="Courier New, Courier, mono" size="-3">
 	    <a href="[% base %]/download_bpseq?mfeid=[% mfe_id %]">Download bpseq</a>
 	  </font>
