--- a/html/download.html
+++ b/html/download.html
@@ -1,3 +1,6 @@
+ </td>
+ <td width="70%">
+
 <p><font size="-1">Candidate cPRF signals are
     available as a batch download from either of the two text files below.
     Each file is prefaced with the SQL used to generate the results, for
@@ -25,5 +28,4 @@
       <p>&nbsp;</p></td>
   </tr>
 </table>
-<p>&nbsp;</p>
-<a href="html/jViz.jar">jviz</a>
+
