--- a/html/filter_finished.html
+++ b/html/filter_finished.html
@@ -1,3 +1,5 @@
+ </td>
+ <td width="70%">
 <table width="95%" border="0" align="center" cellpadding="2" cellspacing="1">
 
   <tr valign="top" bgcolor="#E9EBF7">
