--- a/html/header.html
+++ b/html/header.html
@@ -47,3 +47,7 @@
     [% submit %]
     [% endsearchform %]
 </center>
+
+<table align="center" width="100%" border="0" cellspacing="2" cellpadding="2">
+<tr align="left" valign="top">
+ <td width="15%">
