--- a/html/import.html
+++ b/html/import.html
@@ -1,3 +1,5 @@
+ </td>
+ <td width="70%">
 Type the exact accession of the sequence you wish to import.<br>
 This must be in the NCBI NR database.<br>
 [% startform %]
