--- a/html/header.html
+++ b/html/header.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<base href="[% base %]">
+<!--- <base href="[% base %]">  --->
 <title>Programmed Ribosomal Frameshifting Database</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="stylesheet" href="html/style.css" type="text/css">
