--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,7 @@
       The last update was a <i>[% last_species %]</i> sequence at
       <a href="[% base %]/browse?accession=[% last_accession %]">[% lastupdate %]</a>.
     </p>
+    <p><a href="http://ncisgi.ncifcrf.gov/~belewa/qstat.txt">NCI</a></p>
   </td>
 
   <td width="70%">
