--- a/html/detail_body.html
+++ b/html/detail_body.html
@@ -2,7 +2,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <div align="right"><strong>Gene Name: </strong></div>
+	  <div align="right"><a href="[% base %]/help_detail#help_genename"><strong>Gene Name: </strong></a></div>
 	</td>
 	<td>
 	  [% genename %]
@@ -14,7 +14,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <div align="right"><strong>Species: </strong></div>
+	  <div align="right"><a href="[% base %]/help_detail#help_species"><strong>Species: </strong></a></div>
 	</td>
 	<td>
 	<i>
@@ -22,13 +22,13 @@
 	</i>
 	</td>
 	<td width="40%" rowspan="12" valign="top">
-	  <div align="left"><img src="[% chartURL %]" border="2"></div>
+	  <div align="left"><a href="[% base %]/help_detail#help_graph"><img src="[% chartURL %]" border="2"></a></div>
 	</td>
       </tr>
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <div align="right"><strong>Accession: </strong></div>
+	  <div align="right"><a href="[% base %]/help_detail#help_accession"><strong>Accession: </strong></a></div>
 	</td>
 	<td>
 	  <a href="[% base %]/browse?accession=[% accession %]">[% accession %]</a>
@@ -37,7 +37,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <div align="right"><strong>Position: </strong></div>
+	  <div align="right"><a href="[% base %]/help_detail#help_position"><strong>Position: </strong></a></div>
 	</td>
 	<td>
 	  [% slipstart %]
@@ -46,7 +46,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <div align="right"><strong>Algorithm: </strong></div>
+	  <div align="right"><a href="[% base %]/help_detail#help_algorithm"><strong>Algorithm: </strong></a></div>
 	</td>
 	<td>
 	  [% algorithm %]
@@ -55,7 +55,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <div align="right"><strong>Barcode: </strong></div>
+	  <div align="right"><a href="[% base %]/help_detail#help_barcode"><strong>Barcode: </strong></a></div>
 	</td>
 	<td>
 	  [% barcode %]
@@ -64,7 +64,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <div align="right"><strong>Sequence Length: </strong></div>
+	  <div align="right"><a href="[% base %]/help_detail#help_seqlength"><strong>Sequence Length: </strong></a></div>
 	</td>
 	<td>
 	  [% seqlength %]
@@ -73,7 +73,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <div align="right"><strong>Slippery Site: </strong></div>
+	  <div align="right"><a href="[% base %]/help_detail#help_slipsite"><strong>Slippery Site: </strong></a></div>
 	</td>
 	<td>
 	  [% slipsite %]
@@ -83,7 +83,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <div align="right"><strong>Base Pairs: </strong></div>
+	  <div align="right"><a href="[% base %]/help_detail#help_bp"><strong>Base Pairs: </strong></a></div>
 	</td>
 	<td>
 	  [% pairs %]
@@ -93,7 +93,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <div align="right"><strong>MFE: </strong></div>
+	  <div align="right"><a href="[% base %]/help_detail#help_mfe"><strong>MFE: </strong></a></div>
 	</td>
 	<td>
 	  [% mfe %] kcal/mol
@@ -102,7 +102,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <div align="right"><strong>Z Score: </strong></div>
+	  <div align="right"><a href="[% base %]/help_detail#help_z"><strong>Z Score: </strong></a></div>
 	</td>
 	<td>
 	  [% zscore %] 
@@ -112,7 +112,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <div align="right"><strong>Randomized Mean MFE: </strong></div>
+	  <div align="right"><a href="[% base %]/help_detail#help_rand_mfe"><strong>Randomized Mean MFE: </strong></a></div>
 	</td>
 	<td>
 	  [% randmean %] &plusmn; [% randse %] kcal/mol
@@ -121,7 +121,7 @@
 
       <tr valign="top" bgcolor="#E9EBF7">
 	<td width="20%">
-	  <div align="right"><strong>PPCC: </strong></div>
+	  <div align="right"><a href="[% base %]/help_detail#help_ppcc"><strong>PPCC: </strong></a></div>
 	</td>
 	<td>
 	  [% ppcc %]
