--- a/html/cloud.html
+++ b/html/cloud.html
@@ -1,4 +1,22 @@
-<!-- <p>This is a cloud for [% species %] found in file: [% cloud_file %]</p> -->
+<p>This is a cloud for [% species %]<br>
 <a HREF="[% map_url %]">
   <img src="[% cloud_url %]" ismap>
 </a>
+<br>
+The x axis displays the range of putative <a href="[% base %]/help_detail#help_mfe">
+minimum free energy</a> values computed for all [% species %]
+sequences of length [% seqlength %].<br>
+The y axis displays the range of <a href="[% base %]/help_detail#help_z">
+z scores</a> for these same sequences.<br>
+Each dot thus represents a single (mfe, z score) in relation to all
+the others for [% species %].  The black lines delineate the mean mfe
+and z score for this population.  Grey dots thus represent sequence
+windows which have less putative secondary structure than the mean
+<b>and</b> are less structured than their randomized counterparts, as
+such these are unlikely to be of interest.  Green dots have a minimum
+free energy less than the mean, but are less structured than their
+randomized counterparts while the opposite is true of blue dots.  Red
+dots are more significant than the mean in both respects.  Grey lines
+delineate standard deviations less than mean.  Darker dots represent
+coordinates wihch share more than 1 sequence window.
+</p>
