--- a/html/cloudform.html
+++ b/html/cloudform.html
@@ -1,9 +1,15 @@
  </td>
  <td width="70%">
-
-[% newstartform %]
-Choose your species:<br>
-[% species %]
-[% cloud_filters %]<br>
-[% slipsites %]<br>
-[% submit %]
+ [% newstartform %]
+ <p>
+  Using this form, choose the parameters which define the cloud of
+  MFE/z scores of interest.
+ </p>
+ <p>
+  Choose a species to examine:<br>
+  [% species %]
+  [% cloud_filters %]<br>
+  Choose a slippery site to examine:<br>
+  [% slipsites %]<br>
+  [% submit %]
+ </p>
