--- a/html/landscape.html
+++ b/html/landscape.html
@@ -3,4 +3,4 @@ Landscape for [% accession %]<br>
 The blue line plots nupack, the red line plots pknots.
 The start site is [% start %] and stop is [% stop %]
 <br><br>
-<img src=[% picture %]>
+<img src="[% basedir %]/[% picture %]">
