--- a/html/help_detail.html
+++ b/html/help_detail.html
@@ -7,7 +7,7 @@
   a short description of that field.
  </p>
 
-
+    <a name="example">Example entry from the PRFdb.</a><br>
     <table width="95%" border="0" align="center" cellpadding="2"
   cellspacing="1">
 
