--- a/html/sliplist.html
+++ b/html/sliplist.html
@@ -1,13 +1,18 @@
-
 <tr>
-  <td width="33%"><div align="center"><strong><font size="-1" face="Courier New, Courier, mono">
-<a href="[% base %]/detail?id=[% id %]&accession=[% accession %]&slipstart=[% slipstart %]">[% slipstart %]</a></font></strong></div>
-  </td>
-  <td width="33%"><div align="center"><strong><font size="-1" face="Courier New, Courier, mono">
-[% slipseq %]</font></strong></div>
-  </td>
-  <td width="33%"><div align="center"><strong><font size="-1">
-[% pknotscount %]</font></strong></div>
-  </td>
+ <td width="33%">
+  <div align="center"><strong><font face="Courier New, Courier, mono">
+   <a href="[% base %]/detail?id=[% id %]&accession=[% accession %]&slipstart=[% slipstart %]" title="View the detailed information for [% accession %] at position [% slipstart %]">[% slipstart %]</a>
+  </font></strong></div>
+ </td>
+ <td width="33%">
+  <div align="center"><strong><font face="Courier New, Courier, mono">
+   [% slipseq %]
+  </font></strong></div>
+ </td>
+ <td width="33%">
+ <div align="center"><strong><font face="Courier New, Courier, mono">
+   [% pknotscount %]
+  </font></strong></div>
+ </td>
 </tr>
 
