--- a/html/sliplist_start_codon.html
+++ b/html/sliplist_start_codon.html
@@ -1,12 +1,16 @@
 <tr>
-  <td width="33%"><div align="center"><strong><font size="-1" face="Courier New, Courier, mono">
-  [% orf_start %]</div>
-  </td>
-  <td width="33%"><div align="center"><strong><font color="Green" size="-1" face="Courier New, Courier, mono">
-Start Codon</font></strong></div>
-  </td>
-  <td width="33%"><div align="center"><strong><font size="-1"></font></strong></div>
-  </td>
+ <td width="33%">
+  <div align="center"><strong><font face="Courier New, Courier, mono">
+   [% orf_start %]
+  </font></strong></div>
+ </td>
+ <td width="33%">
+  <div align="center"><strong><font color="green" face="Courier New, Courier, mono">
+   Start Codon
+  </font></strong></div>
+ </td>
+ <td width="33%"><div align="center"><strong> </strong></div>
+ </td>
 </tr>
 
 
