--- a/html/sliplist_header.html
+++ b/html/sliplist_header.html
@@ -1,9 +1,9 @@
 <table width="100%" border="0" cellspacing="2" cellpadding="2">
 <tr bgcolor="#000000">
-  <td width="33%"><div align="center"><strong><font color="#FFFFFF" size="-1">Position</font></strong></div>
+  <td width="25%"><div align="center"><strong><font color="#FFFFFF">Position</font></strong></div>
   </td>
-  <td width="33%"><div align="center"><strong><font color="#FFFFFF" size="-1">Slippery Site</font></strong></div>
+  <td width="25%"><div align="center"><strong><font color="#FFFFFF">Slippery Site</font></strong></div>
   </td>
-  <td width="33%"><div align="center"><strong><font color="#FFFFFF" size="-1">#Folds</font></strong></div>
+  <td width="25%"><div align="center"><strong><font color="#FFFFFF">#Folds</font></strong></div>
   </td>
 </tr>
