--- a/html/sliplist_stop_codon.html
+++ b/html/sliplist_stop_codon.html
@@ -1,12 +1,16 @@
 <tr>
-  <td width="33%"><div align="center"><strong><font size="-1" face="Courier New, Courier, mono">
-  [% orf_stop %]</div>
-  </td>
-  <td width="33%"><div align="center"><strong><font color="Red" size="-1" face="Courier New, Courier, mono">
-Stop Codon</font></strong></div>
-  </td>
-  <td width="33%"><div align="center"><strong><font size="-1"></font></strong></div>
-  </td>
+ <td width="33%">
+  <div align="center"><strong><font face="Courier New, Courier, mono">
+   [% orf_stop %]
+  </font></strong></div>
+ </td>
+ <td width="33%">
+  <div align="center"><strong><font color="Red" face="Courier New, Courier, mono">
+   Stop Codon
+  </font></strong></div>
+ </td>
+ <td width="33%"><div align="center"><strong> </strong></div>
+ </td>
 </tr>
 
 
