fun with bar graphs

--- a/html/cloud.html
+++ b/html/cloud.html
@@ -29,3 +29,11 @@ dots are more significant than the mean in both respects.  Grey lines
 delineate standard deviations less than mean.  Darker dots represent
 coordinates wihch share more than 1 sequence window.
 </p>
+<p>
+Below is a bar graph showing how many putative PRF signals are made up
+of each slippery site.  PRF signals which start with 'AAA' are red, 'UUU' are
+green, 'GGG' are blue, and 'CCC' are black.
+</p>
+<center>
+ <img src="[% basedir %]/images/cloud/[% species %]-bar.png">
+</center>
