--- a/html/download.html
+++ b/html/download.html
@@ -27,5 +27,12 @@
           use Perl or someother scripting language to parse the data.(780 Kb)</font></p>
       <p>&nbsp;</p></td>
   </tr>
+
+  <tr>
+    <td><p><a href="html/prfdb.tar.gz">The prfdb</a></p></td>
+    <td><p>This archive contains the code of the PRFdb.  It includes the source for the
+    secondary structure algorithms used to generate the database as well as a default
+    configuration file.</p></td>
+  </tr>
 </table>
 
