--- a/html/header.html
+++ b/html/header.html
@@ -1,10 +1,11 @@
 <html>
+
 <head>
-<!--- <base href="[% base %]">  --->
-<title>Programmed Ribosomal Frameshifting Database</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link rel="stylesheet" href="[% basedir %]/html/style.css" type="text/css">
+  <title>Programmed Ribosomal Frameshifting Database</title>
+  <meta http-equiv="Content-Type" content="text/html">
+  <link rel="stylesheet" href="[% basedir %]/html/style.css" type="text/css">
 </head>
+
 <body bgcolor="#FFFFFF" text="#000000" link="#009933" vlink="#009900">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
